--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Snythesizer_2</string>
+    <string name="eButton">E Button</string>
+    <string name="fButton">F Button</string>
+    <string name="xButton">X Button</string>
 </resources>
